k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: examples
  labels:
    istio-injection: enabled
    opa-istio-injection: enabled
