k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  namespace: examples
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels: {app:  spring-boot-app}
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: otajisan/spring-boot-kotlin-example:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 18080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 18080
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 18080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: examples
  labels:
    app: spring-boot-app
spec:
  type: ClusterIP
  selector: {app: spring-boot-app}
  ports:
    - port: 8080
      name: http
      targetPort: 8080
      protocol: TCP
