k8s/destination-rule.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-boot-app-dest
  namespace: examples
spec:
  host: spring-boot-app.examples.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
