k8s/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-app-vs
  namespace: examples
spec:
  hosts:
    - spring-boot-app.examples.svc.cluster.local
  gateways:
    - example-gateway-1
    - mesh # applies to all the sidecars in the mesh
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: spring-boot-app.examples.svc.cluster.local
